==> Sambulov/COS/HDL/McuPort/ARM/ST/STM32F103/Port/port_uart.c <==
#include "hdl_iface.h"

typedef struct {
  hdl_delegate_t uart_isr;
  const hdl_transceiver_t *transceiver;
  coroutine_t worker;
  uint8_t tx_data[2];
  uint8_t rx_byte           : 1,
          tx_byte           : 1,
          transmiting       : 1;
} hdl_uart_var_t;

HDL_ASSERRT_STRUCTURE_CAST(hdl_uart_var_t, *((hdl_uart_mcu_t *)0)->obj_var, HDL_UART_VAR_SIZE, port_uart.h);

static inline uint8_t _uart_word_len(USART_TypeDef *periph) {
  return (periph->CR1 & (USART_CR1_M | USART_CR1_PCE)) == (USART_CR1_M)? 2: 1;
}

static uint8_t _uart_worker(coroutine_t *this, uint8_t cancel, void *arg) {
  (void)this;
  hdl_uart_mcu_t *uart = (hdl_uart_mcu_t *) arg;
  hdl_uart_var_t *uart_var = (hdl_uart_var_t *)uart->obj_var;
  hdl_gpio_pin_t *rts = (hdl_gpio_pin_t *)uart->dependencies[5];
  USART_TypeDef *periph = (USART_TypeDef *)uart->config->phy;
  if(!uart_var->transmiting) {
    uint8_t transmit_ready = (uart_var->transceiver != NULL) &&
      (uart_var->transceiver->tx_available != NULL) &&
      uart_var->transceiver->tx_available(uart_var->transceiver->transmitter_context);
    if(transmit_ready) {
      hdl_gpio_set_active(rts);
      transmit_ready = (hdl_is_null_module(rts) || hdl_gpio_is_active(rts));
    }
    else
      hdl_gpio_set_inactive(rts);
    if(transmit_ready) {
      uart_var->transmiting = HDL_TRUE;
      CL_REG_SET(periph->CR1, USART_CR1_TXEIE);
    }
  }
  return cancel;
}

static void _rst_uart_status(USART_TypeDef *uart) {
	__IO uint32_t tmpreg;
	tmpreg = uart->SR;
	tmpreg = uart->DR;
  uart->SR = ~USART_SR_TC;
	(void)tmpreg;
}

static void event_uart_isr(void *event, void *sender, void *context) {
  (void)event; (void)sender;
  hdl_uart_mcu_t *uart = (hdl_uart_mcu_t *)context;
  hdl_uart_var_t *uart_var = (hdl_uart_var_t *)uart->obj_var;
  USART_TypeDef *periph = (USART_TypeDef *)uart->config->phy;
  uint8_t wl = _uart_word_len(periph);
  
	if (periph->SR & USART_SR_IDLE) {
    //(void)periph->DR; /* dummy read */
    _rst_uart_status(periph);
    if((uart_var->transceiver != NULL) && (uart_var->transceiver->end_of_transmission != NULL))
        uart_var->transceiver->end_of_transmission(uart_var->transceiver->receiver_context);
	}
  /* UART in mode Receiver ---------------------------------------------------*/
  if (periph->SR & USART_SR_RXNE) {
    uint16_t data = periph->DR;
    if((uart_var->transceiver != NULL) && (uart_var->transceiver->rx_data != NULL))
      uart_var->transceiver->rx_data(uart_var->transceiver->receiver_context, (uint8_t *)&data, wl);
  }
  ///* UART in mode Transmitter ------------------------------------------------*/
  if ((periph->CR1 & USART_CR1_TXEIE) && (periph->SR & USART_SR_TXE)) {
    CL_REG_CLEAR(periph->CR1, USART_CR1_TXEIE);
    int32_t len = 0;
    if((uart_var->transceiver != NULL) &&
       (uart_var->transceiver->tx_empty != NULL))
      len = uart_var->transceiver->tx_empty(uart_var->transceiver->transmitter_context, 
                                      &uart_var->tx_data[uart_var->tx_byte], wl - uart_var->tx_byte);
    if(len > 0) {
      if((len + uart_var->tx_byte) == wl) {
        CL_REG_CLEAR(periph->SR, USART_SR_TC);
        periph->DR = *((uint16_t *)uart_var->tx_data);
        CL_REG_SET(periph->CR1, USART_CR1_TCIE);
        uart_var->tx_byte = 0;
      }
      else {
        uart_var->tx_byte = 1;
        CL_REG_SET(periph->CR1, USART_CR1_TXEIE);
      }
    }
    else
      uart_var->transmiting = HDL_FALSE;
  }
  if((periph->CR1 & USART_CR1_TCIE) && (periph->SR & USART_SR_TC)) {
    CL_REG_CLEAR(periph->CR1, USART_CR1_TCIE);
    CL_REG_SET(periph->CR1, USART_CR1_TXEIE);
  }
  if (periph->SR & (USART_SR_NE | USART_SR_FE | USART_SR_ORE | USART_SR_PE))
    _rst_uart_status(periph);
}

uint8_t _hdl_uart_set(const void *desc, hdl_uart_word_t bits, uint32_t boud, hdl_uart_parity_t parity, hdl_uart_stop_bits_t stop) {
  if((boud == 0) || (bits == HDL_UART_WORD_7BIT) ||
    (bits > HDL_UART_WORD_9BIT) || (parity > HDL_UART_PARITY_EVEN) || 
    (stop > HDL_UART_STOP_BITS1_5)) return HDL_FALSE;
  hdl_uart_mcu_t *uart = (hdl_uart_mcu_t*)desc;
  hdl_uart_var_t *uart_var = (hdl_uart_var_t *)uart->obj_var;
  USART_TypeDef *periph = (USART_TypeDef *)uart->config->phy;
  hdl_clock_t *clk = (hdl_clock_t *)uart->dependencies[2];
  hdl_clock_freq_t freq;
  hdl_clock_get(clk, &freq);
  uint32_t par = 0;
  if(parity == HDL_UART_PARITY_ODD) par = USART_CR1_PCE | USART_CR1_PS;
  else if(parity == HDL_UART_PARITY_EVEN) par = USART_CR1_PCE;
  uint32_t wl = 0;
  if(bits == HDL_UART_WORD_9BIT) wl = USART_CR1_M;
  uint32_t stp = 0;
  if(stop == HDL_UART_STOP_BITS2) stp = USART_CR2_STOP_1;
  else if(stop == HDL_UART_STOP_BITS1_5) stp = USART_CR2_STOP_0 | USART_CR2_STOP_1;
  else if(stop == HDL_UART_STOP_BITS0_5) stp = USART_CR2_STOP_0;
  uint32_t en = CL_REG_GET(periph->CR1, USART_CR1_UE);
  CL_REG_CLEAR(periph->CR1, USART_CR1_UE);
  hdl_gpio_set_inactive(uart->dependencies[5]);
  while (CL_REG_GET(periph->CR1, USART_CR1_UE));
  _rst_uart_status(periph);
  uart_var->transmiting = HDL_FALSE;
  periph->CR1 = par | wl | USART_CR1_TE | USART_CR1_RE | USART_CR1_RXNEIE | USART_CR1_PEIE | USART_CR1_IDLEIE;
  periph->CR2 = stp;
  periph->CR3 = USART_CR3_EIE;
  if(uart->config->half_duplex)
    periph->CR3 |= USART_CR3_HDSEL;
  else 
    periph->CR3 &= ~USART_CR3_HDSEL;
  periph->BRR = freq.num / (freq.denom * boud);
  CL_REG_MODIFY(periph->CR1, USART_CR1_UE, en);
  return HDL_TRUE;
}

static hdl_module_state_t _hdl_uart(const void *desc, uint8_t enable) {
  hdl_uart_mcu_t *uart = (hdl_uart_mcu_t*)desc;
  hdl_uart_var_t *uart_var = (hdl_uart_var_t *)uart->obj_var;
  //hdl_time_counter_t *timer = (hdl_time_counter_t *)uart->dependencies[4];

  USART_TypeDef *periph = (USART_TypeDef *)uart->config->phy;
  volatile uint32_t *rcc_en = &RCC->APB1ENR;
  volatile uint32_t *rcc_rst = &RCC->APB1RSTR;
  
  switch (uart->config->phy) {
    case (uint32_t)USART1:
      rcc_en = &RCC->APB2ENR;
      rcc_rst = &RCC->APB2RSTR;
      break;
    case (uint32_t)USART2:
    case (uint32_t)USART3:
      break;
    default:
      return HDL_MODULE_FAULT;
  }
  CL_REG_SET(*rcc_rst, uart->config->rcu);
  CL_REG_CLEAR(*rcc_rst, uart->config->rcu);
  if(enable) {
    CL_REG_SET(*rcc_en, uart->config->rcu);
    _hdl_uart_set(desc, uart->config->word_len, uart->config->baudrate, uart->config->parity, uart->config->stop_bits);
    coroutine_add(&uart_var->worker, &_uart_worker, uart);
    uart_var->transceiver = NULL;
    uart_var->tx_byte = 0;
    uart_var->uart_isr.context = uart;
    uart_var->uart_isr.handler = &event_uart_isr;
    hdl_interrupt_request(uart->dependencies[3], &uart_var->uart_isr);
    periph->CR1 |= USART_CR1_UE;
    return HDL_MODULE_ACTIVE;
  }
  coroutine_cancel(&uart_var->worker);
  CL_REG_CLEAR(*rcc_en, uart->config->rcu);
  return HDL_MODULE_UNLOADED;
}

static uint8_t _hdl_uart_set_transceiver(const void *desc, const hdl_transceiver_t *transceiver, uint32_t channel_id) {
  (void)channel_id;
  hdl_uart_mcu_t *uart = (hdl_uart_mcu_t *) desc;
  hdl_uart_var_t *uart_var = (hdl_uart_var_t *)uart->obj_var;  
  uart_var->transceiver = transceiver;
  return HDL_TRUE;
}

const hdl_uart_iface_t hdl_uart_iface = {
  .init = &_hdl_uart,
  .transceiver_set = &_hdl_uart_set_transceiver,
  .setup = &_hdl_uart_set
};
